--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -368,6 +368,65 @@
         "name": "Life crisis",
         "description": "Have you been stuck personally or professionally?"
       }
+    },
+    "checkoutView": {
+      "heading": "Confirm Order",
+      "pleasePay": "Please pay xxx on your bank account:",
+      "includeIdData": "Write your name, phone number / e-mail and the code below on the payment slip:",
+      "callbackAffirmation": "We can call you to reserve a date for a conversation with our psychologists when we receive the money.",
+      "invoiceAffirmation": "You will receive an invoice to your email within 24 hours with payment details.",
+      "item": "Item",
+      "weeks": "Pieces",
+      "price": "Price",
+      "sum": "Sum",
+      "packageDiscount": "Discount",
+      "sumWithPackageDiscount": "Sum with discount",
+      "voucherDiscount": "Voucher discount",
+      "total": "Total",
+      "name": "First-/lastname",
+      "phone": "Phone",
+      "email": "E-mail",
+      "comment": "Comment",
+      "back": "Cancel",
+      "placeOrder": "Place order",
+      "close": "Close",
+      "issue": "Issue",
+      "invoiceText": "You will receive an invoice sent to your email with instructions for payment. When you make a payment to our bank account, we will contact you for your psychological counseling.",
+      "stripe": {
+        "invalid_number": "The card number is not a valid credit card number.",
+        "incomplete_number": "The card number is not a valid credit card number.",
+        "invalid_expiry_month": "The card expiration month is invalid.",
+        "invalid_expiry_year": "The card expiration date is not valid.",
+        "invalid_cvc": "The security code of the card is invalid.",
+        "incomplete_cvc": "Incomplete cvc.",
+        "incomplete_zip": "Incomplete zip",
+        "invalid_swipe_data": "Swipe data cards are invalid.",
+        "incorrect_number": "Card number is incorrect.",
+        "expired_card": "The card has expired.",
+        "incorrect_cvc": "The security code of the card is incorrect.",
+        "incorrect_zip": "Checking the zip code card failed.",
+        "card_declined": "Card denied.",
+        "missing": "No customer charge card is charged.",
+        "processing_error": "An error occurred while processing the card.",
+        "incomplete_expiry": "Incomplete flow.",
+        "invalid_expiry_year_past": "The invalid year expires."
+      }
+    },
+    "validation": {
+      "\"name\" is required": "Name is required",
+      "\"name\" is not allowed to be empty": "Name is not allowed to be empty",
+      "\"phone\" is required": "Phone is required",
+      "\"phone\" is not allowed to be empty": "Phone is not allowed to be empty",
+      "\"street\" is required": "Street is required",
+      "\"street\" is not allowed to be empty": "Street is not allowed to be empty",
+      "\"postal\" is required": "Postal code is required",
+      "\"postal\" is not allowed to be empty": "Postal code is not allowed to be empty",
+      "\"city\" is required": "City is required",
+      "\"city\" is not allowed to be empty": "City is not allowed to be empty",
+      "\"mail\" is required": "E-mail is required",
+      "\"mail\" is not allowed to be empty": "E-mail is not allowed to be empty",
+      "\"mail\" must be a valid email": "E-mail must be valid",
+      "wrongRegexFormat": "Not correct format"
     }
   },
   "ba-BA": {
