--- a/i18n/translations.json
+++ b/i18n/translations.json
@@ -511,7 +511,7 @@
     },
     "staffView": {
       "heading": "Ko smo mi",
-      "preamble": "Nasi psiholozi su uključeni u Društvo psihologa Federacije BiH"
+      "preamble": "Naši psiholozi su uključeni u Društvo psihologa Federacije BiH"
     },
     "howItWorksView": {
       "heading": "Kako radi",
@@ -575,7 +575,7 @@
       "purchase": "Zakažite"
     },
     "footerView": {
-      "about": "Mi smo usmjereni na svakodnevne probleme sa kojima se većina nas susreće tokom života. Mi težimo da naše savjetodavne usluge budu pristupačne za sve, diskretno i po razumnoj cijeni. "
+      "about": "Mi smo usmjereni na svakodnevne probleme sa kojima se većina nas susreće tokom života. Mi težimo da naše savjetodavne usluge budu pristupačne za sve, diskretno i po razumnoj cijeni. Korištenjem teorijskih znanja i naučno dokazanih intervencija, možemo pomoći ljudima da prevaziđu svoje probleme i da nauče da žive život koji žele, udobno i samopouzdano."
     },
     "tacView": {
       "heading": "Pravila i uslovi",
